turbopack/crates/turbopack-tests/tests/snapshot/mdx/error/output/turbopack_crates_turbopack-tests_tests_snapshot_mdx_error_input_index_d5745d.js
(globalThis.TURBOPACK = globalThis.TURBOPACK || []).push([
    "output/turbopack_crates_turbopack-tests_tests_snapshot_mdx_error_input_index_d5745d.js",
    {},
    {"otherChunks":["output/turbopack_crates_turbopack-tests_tests_snapshot_mdx_error_input_index_afcda2.js"],"runtimeModuleIds":["~project/turbopack/crates/turbopack-tests/tests/snapshot/mdx/error/input/index.js [test] (ecmascript)"]}
]);
// Dummy runtime